[package]
name = "cmd3"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"], public = true }
colored = "3.0.0"
rustyline = { version = "14.0.0", features = ["derive"] }
shlex = "1.3.0"
thiserror = "1.0.63"

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }

[lib]
name = "cmd3"

[[example]]
name = "simple_console"
